# strcx-yield-desk

./: AGENT.md  DEMO.md  LICENSE  README.md  SETUP-CLAUDE-CODE.md  analytics.py  desk.py  kraken_client.py  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  build.py
mock_data/: ohlc_btc.json  ohlc_mstrx.json  ohlc_strcx.json  ticker_mstrx.json  ticker_strcx.json
scripts/: demo.sh  keyless-probe.sh
tests/: test_analytics.py
web/: README.md  build.py  index.html  template.html
